Compile defaults and edits

--- a/ILEditor/Forms/CompileOptions.resx
+++ b/ILEditor/Forms/CompileOptions.resx
@@ -158,8 +158,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACy
-        CAAAAk1TRnQBSQFMAgEBAgEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACY
+        CAAAAk1TRnQBSQFMAgEBAgEAARgBAAEYAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -187,18 +187,20 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xsAAS4BAgH1PQABLgFQ
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xsAAS4BAgH/PQABLgFQ
         AU8B9CIAAQcFtAPPBa4BBwEAAQcFtAFQAU8CLgFQAZgBUAEoAfchAAG0Df8BrgEAAbQF/wFQBJgBeAGY
-        AVABKAH0IAABtA3/Aa4BAAG0Bf8BUAGYBXgBmAFQAS4gAAG0Cv8C9QH/Aa4BAAG0Bf8BUAGZA5gBeAGY
-        AVABLgH/IAABtAn/A/UB/wHPAQABtAX/BFABcgGYAVABTwGuIQABtAf/BfUB/wHPAQABtAf/AvUBUAF4
-        AVAB9gHPIQABtAX/BfUC9AH/Ac8BAAG0Bf8E9QJQAfMB/wHPIQABtAT/BPUE9AH/AbQBAAG0BP8E9QT0
-        Af8BtCEAAbQD/wT1AvQD8wH/AbQBAAG0A/8E9QL0A/MB/wG0IQABtA3/AbQBAAG0Df8BtCEAD7QBAA+0
-        IQABtQ0JAbQBAAG1DQkBtCEAAfEBuwu0AbUB8QEAAfEBuwu0AbUB8WEAAUIBTQE+BwABPgMAASgDAAFA
-        AwABEAMAAQEBAAEBBQABgBcAA/8BAAP/AccEAAP/AcMFAAEBAQABAQUAAQEHAAEBBwABAQcAAQEBAAEB
-        BQABAQEAAQEFAAEBAQABAQUAAQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEBAAEBBQABAQEAAQEFAAEB
-        AQABAQQABP8EAAs=
+        AVABKAH0IAABtA3/Aa4BAAG0Bf8BUAGYBXgBmAFQAS4gAAG0Df8BrgEAAbQF/wFQAZkDmAF4AZgBUAEu
+        Af8gAAG0Df8BzwEAAbQF/wRQAXIBmAFQAU8BriEAAbQN/wHPAQABtAn/AVABeAFQAfYBzyEAAbQK/wL0
+        Af8BzwEAAbQJ/wJQAfMB/wHPIQABtAj/BPQB/wG0AQABtAj/BPQB/wG0IQABtAf/AvQD8wH/AbQBAAG0
+        B/8C9APzAf8BtCEAAbQN/wG0AQABtA3/AbQhAA+0AQAPtCEAAbUNCQG0AQABtQ0JAbQhAAHxAbsLtAG1
+        AfEBAAHxAbsLtAG1AfFhAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAD/wHH
+        BAAD/wHDBQABAQEAAQEFAAEBBwABAQcAAQEHAAEBAQABAQUAAQEBAAEBBQABAQEAAQEFAAEBAQABAQUA
+        AQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEBAAEBBQABAQEAAQEEAAT/BAAL
 </value>
   </data>
+  <metadata name="rightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>232, 17</value>
+  </metadata>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         AAABAAUAEBAAAAEAIABoBAAAVgAAABgYAAABACAAiAkAAL4EAAAgIAAAAQAgAKgQAABGDgAAMDAAAAEA
