Move compile options to user tool

--- a/ILEditor/UserTools/CompileOptions.resx
+++ b/ILEditor/UserTools/CompileOptions.resx
@@ -118,15 +118,15 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>335, 17</value>
   </metadata>
   <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABC
-        DAAAAk1TRnQBSQFMAgEBBAEAATABAAEwAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACY
+        CAAAAk1TRnQBSQFMAgEBAgEAASgBAAEoAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,31 +153,52 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8ABQAB/wG8
-        Ae8BtQG0AZEEiwEoAQIBkQH0BwAJUgFMAXQCAAH/Ae8BIwFLAVIBUQHtCwABRAFLAVIBmQH2BwAB8QG0
-        AbsBCQHwAfEB8wH0Av8BLgFQASgBvAcAAXQBGwHDBaABwwKZAgAB/wHtAUsCmgFSAUsB9AcAAQkCtAFL
-        ApoBUgFLAZEEtAG7AQABvAG1BP8BUAFPAi4BUAGYAVABTwH0AQABBwS0AewBmQGgAnoBUgJ6ARoBUgH0
-        AwAB8QFRAfYBdAFMAlIC6wNtAewBAAG0AvQBUQH2AXQBTAJSAfAD8wG0AQAB8gGLBLQBUASYAXgBmAFQ
-        AU8B9AG0Bf8BeQEaBHoBmgGZAewBAAHxAgcB7wFzAXkBmQF5AnoBUgGSArwB8wFtAQABtAH0AQkBmQF5
-        AZkBeQJ6AXQB9gH/AfMBtAEAAf8BuwG1AfQCCQFQAZgFeAGYAVABLgG0Bf8BGgF5AaABegFSAXoBGgF0
-        Aa4BAAHvAfIC8AG8ARwBeQHDA3oBUgLvAbwBbQEAAbQB9AIJAe8BeQHDA3oBUgG8AfMBtAIAAfQBtAH/
-        AhkBUAGZA5gBeAGYAVABLgH/AbQG/wGZARoBmgFSAaABUgEaAa4BAAHvAfEEiwHrAXkBwwN6AVIBHAG8
-        AW0BAAG1AfQBCQH/AQkBGgF5AcMDegFSAfABtAIAAf8BtAH/AhkEUAFyAZgBUAFPAf8BAAG0Bv8B9AF5
-        AcMBmgEaAXkB/wHPAQABBwHxArQDtQH3AXoBwwN6AVIBBwHrAQABtQH/BAkBBwF6AcMDegF0AZECAAH/
-        AbMB/wYZAVABeAFQAbMB/wEAAbQH/wEaAZoBwwF5ARsB/wHPAQABBwHxAc8FtAH3AXoBwwJ6AnQB7AEA
-        AQkB/wEJAf8BCQL/ARoBegHDAnoCdAH/AgABtAH/BhkCUAH/AbQB/wEAAbQH/wH0AXkBGgGZAfQB/wHP
-        AQABBwHxAc8GtAHsAZoBGgGZAZoBGgF0AQABCQH/BgkBmQGaARoBmQGaARoBdAIAAbQB8wgZAf8BtAH/
-        AQABtAj/ARoBeQHzAfQB/wG0AQABvAHxAc8GtAGLAZkBeQEaAfYBGgFSAQABCQH/AQkB/wEJA/8BCQEa
-        AXkBGgH2ARoBdAIAAbsBGQH0BxkB/wK0AfQBtAf/AvQD8wH/AbQBAAG8AfEGzwG0AYsB8AFzAXQBmQFS
-        AXMBAAEJAf8ICQHvAXQBmQFSARsCAAIJAf8HGQH/AbQBGQK0Df8BtAEAAfAB9AjxAfMBkgIHAfAB7QEA
-        AQkM/wG0AwACCQH/BBkD9AH/AbQB/wG7D7QBAAPwArwDBwPvAfcC7QHwAZIBAAEJAf8HmAJ4AZcB/wG0
-        AwAB8QEJAf8E9AX/ARkBtAG1DQkBtAYAAfQB8AHxAfMEvAEHAfEBkgEAAQkM/wG0AwAB8gHcBf8B9AMZ
-        AQkBugHzAfEBuwu0AbUB8QcAAf8C8QHyBPEB8wH3AQAB8wgJA7UBtAEJAwAB9AEJAdwB2wS6AbsDCQH0
-        Af8YAAHyAbwDBwLvAfAQAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/ggABAwH4
-        AQABwAF/AfABfwEAAQMB+AEAAcABPwGAAQEBAAEBAgAB4AEAAYABAQMAAQECAAGAAQEDAAEBAgABgAEB
-        AYACAAEBAgABgAEBAYABAQEAAQECAAGAAQEBgAEBAQABAQIAAYABAAHAAQEBAAEBAgABgAEAAcABAQEA
-        AQECAAGAAQABwAIAAQECAAGAAQABwAIAAQECAAGAAQEBwAIAAQECAAGAAQEBwAIAAQEB+AEAAYABAQHA
-        AgABAQH8AQABgAEBAcABAAP/AQAC/ws=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xsAAS4BAgH/PQABLgFQ
+        AU8B9CIAAQcFtAPPBa4BBwEAAQcFtAFQAU8CLgFQAZgBUAEoAfchAAG0Df8BrgEAAbQF/wFQBJgBeAGY
+        AVABKAH0IAABtA3/Aa4BAAG0Bf8BUAGYBXgBmAFQAS4gAAG0Df8BrgEAAbQF/wFQAZkDmAF4AZgBUAEu
+        Af8gAAG0Df8BzwEAAbQF/wRQAXIBmAFQAU8BriEAAbQN/wHPAQABtAn/AVABeAFQAfYBzyEAAbQK/wL0
+        Af8BzwEAAbQJ/wJQAfMB/wHPIQABtAj/BPQB/wG0AQABtAj/BPQB/wG0IQABtAf/AvQD8wH/AbQBAAG0
+        B/8C9APzAf8BtCEAAbQN/wG0AQABtA3/AbQhAA+0AQAPtCEAAbUNCQG0AQABtQ0JAbQhAAHxAbsLtAG1
+        AfEBAAHxAbsLtAG1AfFhAAFCAU0BPgcAAT4DAAEoAwABQAMAARADAAEBAQABAQUAAYAXAAP/AQAD/wHH
+        BAAD/wHDBQABAQEAAQEFAAEBBwABAQcAAQEHAAEBAQABAQUAAQEBAAEBBQABAQEAAQEFAAEBAQABAQUA
+        AQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEBAAEBBQABAQEAAQEEAAT/BAAL
 </value>
   </data>
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>445, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="newType.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <data name="newCommand.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAIDSURBVDhPpZLrS5NhGMb3j4SWh0oRQVExD4gonkDpg4hG
+        YKxG6WBogkMZKgPNCEVJFBGdGETEvgwyO9DJE5syZw3PIlPEE9pgBCLZ5XvdMB8Ew8gXbl54nuf63dd9
+        0OGSnwCahxbPRNPAPMw9Xpg6ZmF46kZZ0xSKzJPIrhpDWsVnpBhGkKx3nAX8Pv7z1zg8OoY/cITdn4fw
+        bf/C0kYAN3Ma/w3gWfZL5kzTKBxjWyK2DftwI9tyMYCZKXbNHaD91bLYJrDXsYbrWfUKwJrPE9M2M1Oc
+        VzOOpHI7Jr376Hi9ogHqFIANO0/MmmmbmSmm9a8ze+I4MrNWAdjtoJgWcx+PSzg166yZZ8xM8XvXDix9
+        c4jIqFYAjoriBV9AhEPv1mH/sonogha0afbZMMZz+yreTGyhpusHwtNNCsA5U1zS4BLxzJIfg299qO32
+        Ir7UJtZfftyATqeT+8o2D8JSjQrAJblrncYL7ZJ2+bfaFnC/1S1NjL3diRat7qrO7wLRP3HjWsojBeCo
+        mDEo5mNjuweFGvjWg2EBhCbpkW78htSHHwRyNdmgAFzPEee2iFkzayy2OLXzT4gr6UdUnlXrullsxxQ+
+        kx0g8BTA3aZlButjSTyjODq/WcQcW/B/Je4OQhLvKQDnzN1mp0nnkvAhR8VuMzNrpm1mpjgkoVwB/v8D
+        TgDQASA1MVpwzwAAAABJRU5ErkJggg==
+</value>
+  </data>
+  <metadata name="rightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>550, 17</value>
+  </metadata>
 </root>
