--- a/ILEditor/Properties/Resources.resx
+++ b/ILEditor/Properties/Resources.resx
@@ -130,6 +130,9 @@
   <data name="OpenMember" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Help\OpenMember.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
+  <data name="Compiling" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Help\Compiling.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
+  </data>
   <data name="LibraryList" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Help\LibraryList.html;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;utf-8</value>
   </data>
