--- a/ILEditor/UserTools/ObjectBrowse.resx
+++ b/ILEditor/UserTools/ObjectBrowse.resx
@@ -117,16 +117,36 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+  <metadata name="toolStrip1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
+  </metadata>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="fetchButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJKSURBVDhPpdJbSNNRHAfwE730VD4VSRRG0uUpCQm70IMh
+        9RR7CMFEU2utJttqFriNco7hUrQpY2qX6W7mupAkZtoFs5u5MoqCLqMnYaKVutt/92/nnP+M6MnsC9+X
+        w/l9/ud//n/y35GoPPLmPl9Ie90HTQ+t6wtqHZ9wrvsjzto+QH3tPc5cfgtV5wSUVi+qLa+g6XwWYnMc
+        MN7ypdqGpvCvVZhHUhxgT15KpU0j4IDG9RVLSVXDIxGodX7mC7FEElFaIZZASEggIMQxF47hR1DA9GwE
+        /pkwJqeD+OYP8P1HjcMZgF4YSzyVQjyZ5FAknkA4KkLzkQR+hqKYCVBoTsDU9wjfX6YfFAF22yxJCiQY
+        QhujkEChMDsNhYIUUvXsw/GuPPhn5/n+0vMDIsA+FUsynebAAhSjjTKIIgw66SiAvr8ExR1b6CkFlOju
+        ioD66rvfwEIZoHTvhcJVAJkjH5W2POjuHMYNbytqbh5CkXktirUeEVC2vxYB2tQfkNy5E30TVtx+Y+GD
+        vV4zzA9rYH/ZCJm7CPkNK7DDRFYRhWWcAyxpWoakKFBF35cNtwwrcfG+HMZ7UtT1V6B+4AQ6Rg0o7d6D
+        3AskSarbxvjw3zlyZSs842a4x5phf9EI23MTRU6hfbQeUvcB5OpWIltDthPJ6V6PrOUp/7OOmR6jwvgA
+        5YYhSNo34mDrOhReWo3dTVko69oF65M6VDqLsEmXhf1q/SC/g8Vmm2FZuNxeiA1aMpmtI5szy4tPjo6E
+        12uXY42W5GSWaAj5BRUefiefi1eCAAAAAElFTkSuQmCC
+</value>
+  </data>
+  <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>122, 17</value>
   </metadata>
   <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAI
-        DgAAAk1TRnQBSQFMAgEBBgEAAUABAAFAAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
-        AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABm
+        CgAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
         AWYDAAGZAwABzAIAATMDAAIzAgABMwFmAgABMwGZAgABMwHMAgABMwH/AgABZgMAAWYBMwIAAmYCAAFm
@@ -153,38 +173,26 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wsAAS4BAgH/PQABLgFQ
-        AU8B9DIAAQcFtAFQAU8CLgFQAZgBUAEoAfcBAAEHBbQDzwWuAQchAAG0Bf8BUASYAXgBmAFQASgB9AG0
-        Df8BriEAAbQF/wFQAZgFeAGYAVABLgG0Af8B1AH/A+8B9wWSAf8BriEAAbQF/wFQAZkDmAF4AZgBUAEu
-        Af8BtA3/Aa4hAAG0Bf8EUAFyAZgBUAFPAa4BAAG0Af8B2wH/AQcE7wT3Af8BzyEAAbQJ/wFQAXgBUAH2
-        Ac8BAAG0Df8BzyEAAbQJ/wJQAfMB/wHPAQABtAH/AdsB/wMHBu8B/wHPIQABtAj/BPQB/wG0AQABtA3/
-        AbQhAAG0B/8C9APzAf8BtAEAAbQB/wHbAf8JBwH/AbQhAAG0Df8BtAEAAbQN/wG0IQAPtAEAD7QhAAG1
-        DQkBtAEAAbUNCQG0IQAB8QG7C7QBtQHxAQAB8QG7C7QBtQHxYQAB/wG8Ae8BtQG0AZEEiwEoAQIBkQH0
-        BwAJUgFMAXQCAAH/Ae8BIwFLAVIBUQHtCwABRAFLAVIBmQH2BwAB8QG0AbsBCQHwAfEB8wH0Av8BLgFQ
-        ASgBvAcAAXQBGwHDBaABwwKZAgAB/wHtAUsCmgFSAUsB9AcAAQkCtAFLApoBUgFLAZEEtAG7AQABvAG1
-        BP8BUAFPAi4BUAGYAVABTwH0AQABBwS0AewBmQGgAnoBUgJ6ARoBUgH0AwAB8QFRAfYBdAFMAlIC6wNt
-        AewBAAG0AvQBUQH2AXQBTAJSAfAD8wG0AQAB8gGLBLQBUASYAXgBmAFQAU8B9AG0Bf8BeQEaBHoBmgGZ
-        AewBAAHxAgcB7wFzAXkBmQF5AnoBUgGSArwB8wFtAQABtAH0AQkBmQF5AZkBeQJ6AXQB9gH/AfMBtAEA
-        Af8BuwG1AfQCCQFQAZgFeAGYAVABLgG0Bf8BGgF5AaABegFSAXoBGgF0Aa4BAAHvAfIC8AG8ARwBeQHD
-        A3oBUgLvAbwBbQEAAbQB9AIJAe8BeQHDA3oBUgG8AfMBtAIAAfQBtAH/AhkBUAGZA5gBeAGYAVABLgH/
-        AbQG/wGZARoBmgFSAaABUgEaAa4BAAHvAfEEiwHrAXkBwwN6AVIBHAG8AW0BAAG1AfQBCQH/AQkBGgF5
-        AcMDegFSAfABtAIAAf8BtAH/AhkEUAFyAZgBUAFPAf8BAAG0Bv8B9AF5AcMBmgEaAXkB/wHPAQABBwHx
-        ArQDtQH3AXoBwwN6AVIBBwHrAQABtQH/BAkBBwF6AcMDegF0AZECAAH/AbMB/wYZAVABeAFQAbMB/wEA
-        AbQH/wEaAZoBwwF5ARsB/wHPAQABBwHxAc8FtAH3AXoBwwJ6AnQB7AEAAQkB/wEJAf8BCQL/ARoBegHD
-        AnoCdAH/AgABtAH/BhkCUAH/AbQB/wEAAbQH/wH0AXkBGgGZAfQB/wHPAQABBwHxAc8GtAHsAZoBGgGZ
-        AZoBGgF0AQABCQH/BgkBmQGaARoBmQGaARoBdAIAAbQB8wgZAf8BtAH/AQABtAj/ARoBeQHzAfQB/wG0
-        AQABvAHxAc8GtAGLAZkBeQEaAfYBGgFSAQABCQH/AQkB/wEJA/8BCQEaAXkBGgH2ARoBdAIAAbsBGQH0
-        BxkB/wK0AfQBtAf/AvQD8wH/AbQBAAG8AfEGzwG0AYsB8AFzAXQBmQFSAXMBAAEJAf8ICQHvAXQBmQFS
-        ARsCAAIJAf8HGQH/AbQBGQK0Df8BtAEAAfAB9AjxAfMBkgIHAfAB7QEAAQkM/wG0AwACCQH/BBkD9AH/
-        AbQB/wG7D7QBAAPwArwDBwPvAfcC7QHwAZIBAAEJAf8HmAJ4AZcB/wG0AwAB8QEJAf8E9AX/ARkBtAG1
-        DQkBtAYAAfQB8AHxAfMEvAEHAfEBkgEAAQkM/wG0AwAB8gHcBf8B9AMZAQkBugHzAfEBuwu0AbUB8QcA
-        Af8C8QHyBPEB8wH3AQAB8wgJA7UBtAEJAwAB9AEJAdwB2wS6AbsDCQH0Af8YAAHyAbwDBwLvAfAQAAFC
-        AU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAB/wHHAv8EAAH/AcMC/wUAAQEBAAEB
-        BwABAQcAAQEHAAEBBQABAQEAAQEFAAEBAQABAQUAAQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEBAAEB
-        BQABAQEAAQEFAAEBAQABAQUAAQEBAAEBBAAE/wUAAQMB+AEAAcABfwHwAX8BAAEDAfgBAAHAAT8BgAEB
-        AQABAQIAAeABAAGAAQEDAAEBAgABgAEBAwABAQIAAYABAQGAAgABAQIAAYABAQGAAQEBAAEBAgABgAEB
-        AYABAQEAAQECAAGAAQABwAEBAQABAQIAAYABAAHAAQEBAAEBAgABgAEAAcACAAEBAgABgAEAAcACAAEB
-        AgABgAEBAcACAAEBAgABgAEBAcACAAEBAfgBAAGAAQEBwAIAAQEB/AEAAYABAQHAAQAD/wEAAv8L
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xgAAf8B8gGRAbQCrgHw
+        OAAB9AGRAbQBtQG7ArQBiwGRAfMGAAHzAgcB8xYAAQcFtAPPBa4BBwUAAv8BkQS7BLQBiwQAAfQBvAGS
+        AbwBBwH3AQcB9BQAAbQN/wGuAgAB/wHxA3IBzwMJAbsEtAHPAgAB/wHxAfcBBwLzArwB7wGSAfAB/xIA
+        AbQN/wGuAQAB9AHsAXICmAFyAa4CCQG7BrQB/wHyAe8BBwLzAfEB8AIHAbwBBwLvAfIB/xAAAbQK/wL1
+        Af8BrgEAAXIEmAFyAYsBCQG1AbQCuwO0Ac8CBwHyAfQB8gLxAfAEBwG8AQcB9wEHEAABtAn/A/UB/wHP
+        AQABcgIIAQcBmAFyAewBbwIXAW8B7AG0AbsBtAGuAe8C9ALyAvEB8AYHAbwBkhAAAbQH/wX1Af8BzwEA
+        AXICCAGYARwBbwEXAeMBlAHjAW8BTAFvAZEBtAG1Ae8C9ALzAfIC8QYHAbwB9xAAAbQF/wX1AvQB/wHP
+        AQABcgEIAZgBcgFvAeMDlAFvAuMBFwFMAfMB/wHvAvQB8wHyAQcBvALwAbwB7wMHAbwB9xAAAbQE/wT1
+        BPQB/wG0AQABcgKYAXIBFwG9A5QB4wFvAuMBFwH0AQAB7wH0AfMC8QEHAfEC/wHxAQcB8AIHAbwB9xAA
+        AbQD/wT1AvQD8wH/AbQBAAHvAXgCcgEXAb0BlAPjAm8B4wEXAfQBAAHvAfECvAHwAe8E/wHvAfABvAIH
+        AZIQAAG0Df8BtAEAAf8B9AHyAXIBFwGUAuMClALjAW8BFwH0AQAB8AHvAfAC/wEHAe8C9wHvAQcC/wHw
+        Ae8BvBAAD7QFAAFvARYBlAHjAhcB4wGUARYBTAH1AgAB7wP/AfIB7wLwAe8B8gP/Ae8RAAG1DQkBtAUA
+        AZMD4wIWA+MBkwMAAfIBBwL3Ae8B8AL/AfAB7wL3AQcB8hEAAfEBuwu0AbUB8QUAAf8B9AHzAW8CFwFv
+        AfMB9AH/BgAB/wHvBP8B7wH/OQAB8gEHAvcBBwHyFQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
+        AQEFAAGAFwAD/wEAAv8B/gEDAv8CAAL/AfwBAAH8AT8DAAEBAfABAAHwAQ8DAAEBAYABAAHAAQMDAAEB
+        BwABAQcAAQEHAAEBBwABAQcAAQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEB8AEBAYABAQMAAQEB8AED
+        AYABAQMAAQEB8AEDAfABDwIABP8B+AEfAgAL
 </value>
   </data>
+  <metadata name="objectRightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>232, 17</value>
+  </metadata>
 </root>
