--- a/ILEditor/UserTools/ObjectBrowse.resx
+++ b/ILEditor/UserTools/ObjectBrowse.resx
@@ -124,17 +124,17 @@
   <data name="fetchButton.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
         iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJKSURBVDhPpdJbSNNRHAfwE730VD4VSRRG0uUpCQm70IMh
-        9RR7CMFEU2utJttqFriNco7hUrQpY2qX6W7mupAkZtoFs5u5MoqCLqMnYaKVutt/92/nnP+M6MnsC9+X
-        w/l9/ud//n/y35GoPPLmPl9Ie90HTQ+t6wtqHZ9wrvsjzto+QH3tPc5cfgtV5wSUVi+qLa+g6XwWYnMc
-        MN7ypdqGpvCvVZhHUhxgT15KpU0j4IDG9RVLSVXDIxGodX7mC7FEElFaIZZASEggIMQxF47hR1DA9GwE
-        /pkwJqeD+OYP8P1HjcMZgF4YSzyVQjyZ5FAknkA4KkLzkQR+hqKYCVBoTsDU9wjfX6YfFAF22yxJCiQY
-        QhujkEChMDsNhYIUUvXsw/GuPPhn5/n+0vMDIsA+FUsynebAAhSjjTKIIgw66SiAvr8ExR1b6CkFlOju
-        ioD66rvfwEIZoHTvhcJVAJkjH5W2POjuHMYNbytqbh5CkXktirUeEVC2vxYB2tQfkNy5E30TVtx+Y+GD
-        vV4zzA9rYH/ZCJm7CPkNK7DDRFYRhWWcAyxpWoakKFBF35cNtwwrcfG+HMZ7UtT1V6B+4AQ6Rg0o7d6D
-        3AskSarbxvjw3zlyZSs842a4x5phf9EI23MTRU6hfbQeUvcB5OpWIltDthPJ6V6PrOUp/7OOmR6jwvgA
-        5YYhSNo34mDrOhReWo3dTVko69oF65M6VDqLsEmXhf1q/SC/g8Vmm2FZuNxeiA1aMpmtI5szy4tPjo6E
-        12uXY42W5GSWaAj5BRUefiefi1eCAAAAAElFTkSuQmCC
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAJJSURBVDhPpdJbSNNRHAfwE730VD4VSRRGUr4lIWEXejBG
+        PcUeQjDR1FqrmVvNArdRThkuRZsytnWb7qatC0ZiptnNbubKKAoqpSdB0Urd7b/7t3POf0b0ZPaF78vh
+        /D7/8z//P/nvSFVeRXP3eFDbNQ5NJ637K2qcn3G24xPO2D9Cfe0DTl9+B9WlUSgtPlSaX0Njex5kcxww
+        3BpLtvVP4V970vQ4yQH25KVU1vQEHNC4x7CUVDQ8FIEa1xe+EI0nEKEVonEEhTj8QgxzoSh+BARMz4Yx
+        ORPCxHQA3yb9fP9hw0AaoBfGEksmEUskOBSOxRGKiNB8OI6fwQhm/BSaEzD1Pcz3l+j7RIDdNkuCAnGG
+        0EYpJFAoxE5DoQCFVJ17cLQ9F5Oz83x/8bleEWCfiiWRSnFgAYrSRhhEEQYdd+ZD31OEQtsWekoBRbq7
+        IqC++v43sFAGKD27UeXOh9yZh3J7LnTdB3HD14rqmwcgMa1FodYrAkrrGxGgTf4BKVzbcWfUgttvzXzw
+        us8E02A1HK8aIfdIkNewAtuMZBWpMo9wgCVFy5AkBSro+7LhlgElLtxXwHBPhtqeMtT1HoNtqB7FHbuQ
+        fZ4kSGXbMB/+O4eu5MA7YoJnuBmOl42wvzBS5ASsQ3WQefYhW7cSmRqylUhPdXnlLc/4n3XE+Ahlhgco
+        re+H1LoR+1vXoeDiauxsykBJ+w5Yntai3CXBJl0G9qr1ffwOFpuc+mWhUkcBNmjJRKaObE4vLz5ZWhJa
+        r12ONVqSlV6iIeQXAll+HyKvM3UAAAAASUVORK5CYII=
 </value>
   </data>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
@@ -144,8 +144,8 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABm
-        CgAAAk1TRnQBSQFMAgEBAwEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABU
+        CgAAAk1TRnQBSQFMAgEBAwEAARABAAEQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAARADAAEBAQABCAYAAQQYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -176,20 +176,20 @@
         AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/xgAAf8B8gGRAbQCrgHw
         OAAB9AGRAbQBtQG7ArQBiwGRAfMGAAHzAgcB8xYAAQcFtAPPBa4BBwUAAv8BkQS7BLQBiwQAAfQBvAGS
         AbwBBwH3AQcB9BQAAbQN/wGuAgAB/wHxA3IBzwMJAbsEtAHPAgAB/wHxAfcBBwLzArwB7wGSAfAB/xIA
-        AbQN/wGuAQAB9AHsAXICmAFyAa4CCQG7BrQB/wHyAe8BBwLzAfEB8AIHAbwBBwLvAfIB/xAAAbQK/wL1
-        Af8BrgEAAXIEmAFyAYsBCQG1AbQCuwO0Ac8CBwHyAfQB8gLxAfAEBwG8AQcB9wEHEAABtAn/A/UB/wHP
-        AQABcgIIAQcBmAFyAewBbwIXAW8B7AG0AbsBtAGuAe8C9ALyAvEB8AYHAbwBkhAAAbQH/wX1Af8BzwEA
-        AXICCAGYARwBbwEXAeMBlAHjAW8BTAFvAZEBtAG1Ae8C9ALzAfIC8QYHAbwB9xAAAbQF/wX1AvQB/wHP
-        AQABcgEIAZgBcgFvAeMDlAFvAuMBFwFMAfMB/wHvAvQB8wHyAQcBvALwAbwB7wMHAbwB9xAAAbQE/wT1
-        BPQB/wG0AQABcgKYAXIBFwG9A5QB4wFvAuMBFwH0AQAB7wH0AfMC8QEHAfEC/wHxAQcB8AIHAbwB9xAA
-        AbQD/wT1AvQD8wH/AbQBAAHvAXgCcgEXAb0BlAPjAm8B4wEXAfQBAAHvAfECvAHwAe8E/wHvAfABvAIH
-        AZIQAAG0Df8BtAEAAf8B9AHyAXIBFwGUAuMClALjAW8BFwH0AQAB8AHvAfAC/wEHAe8C9wHvAQcC/wHw
-        Ae8BvBAAD7QFAAFvARYBlAHjAhcB4wGUARYBTAH1AgAB7wP/AfIB7wLwAe8B8gP/Ae8RAAG1DQkBtAUA
-        AZMD4wIWA+MBkwMAAfIBBwL3Ae8B8AL/AfAB7wL3AQcB8hEAAfEBuwu0AbUB8QUAAf8B9AHzAW8CFwFv
-        AfMB9AH/BgAB/wHvBP8B7wH/OQAB8gEHAvcBBwHyFQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEA
-        AQEFAAGAFwAD/wEAAv8B/gEDAv8CAAL/AfwBAAH8AT8DAAEBAfABAAHwAQ8DAAEBAYABAAHAAQMDAAEB
-        BwABAQcAAQEHAAEBBwABAQcAAQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEB8AEBAYABAQMAAQEB8AED
-        AYABAQMAAQEB8AEDAfABDwIABP8B+AEfAgAL
+        AbQN/wGuAQAB9AHsAXICmAFyAa4CCQG7BrQB/wHyAe8BBwLzAfEB8AIHAbwBBwLvAfIB/xAAAbQN/wGu
+        AQABcgSYAXIBiwEJAbUBtAK7A7QBzwIHAfIB9AHyAvEB8AQHAbwBBwH3AQcQAAG0Df8BzwEAAXICCAEH
+        AZgBcgHsAW8CFwFvAewBtAG7AbQBrgHvAvQC8gLxAfAGBwG8AZIQAAG0Df8BzwEAAXICCAGYARwBbwEX
+        AeMBlAHjAW8BTAFvAZEBtAG1Ae8C9ALzAfIC8QYHAbwB9xAAAbQK/wL0Af8BzwEAAXIBCAGYAXIBbwHj
+        A5QBbwLjARcBTAHzAf8B7wL0AfMB8gEHAbwC8AG8Ae8DBwG8AfcQAAG0CP8E9AH/AbQBAAFyApgBcgEX
+        Ab0DlAHjAW8C4wEXAfQBAAHvAfQB8wLxAQcB8QL/AfEBBwHwAgcBvAH3EAABtAf/AvQD8wH/AbQBAAHv
+        AXgCcgEXAb0BlAPjAm8B4wEXAfQBAAHvAfECvAHwAe8E/wHvAfABvAIHAZIQAAG0Df8BtAEAAf8B9AHy
+        AXIBFwGUAuMClALjAW8BFwH0AQAB8AHvAfAC/wEHAe8C9wHvAQcC/wHwAe8BvBAAD7QFAAFvARYBlAHj
+        AhcB4wGUARYBTAH/AgAB7wP/AfIB7wLwAe8B8gP/Ae8RAAG1DQkBtAUAAZMD4wIWA+MBkwMAAfIBBwL3
+        Ae8B8AL/AfAB7wL3AQcB8hEAAfEBuwu0AbUB8QUAAf8B9AHzAW8CFwFvAfMB9AH/BgAB/wHvBP8B7wH/
+        OQAB8gEHAvcBBwHyFQABQgFNAT4HAAE+AwABKAMAAUADAAEQAwABAQEAAQEFAAGAFwAD/wEAAv8B/gED
+        Av8CAAL/AfwBAAH8AT8DAAEBAfABAAHwAQ8DAAEBAYABAAHAAQMDAAEBBwABAQcAAQEHAAEBBwABAQcA
+        AQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEB8AEBAYABAQMAAQEB8AEDAYABAQMAAQEB8AEDAfABDwIA
+        BP8B+AEfAgAL
 </value>
   </data>
   <metadata name="objectRightClick.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
