--- a/ILEditor/UserTools/TreeBrowse.resx
+++ b/ILEditor/UserTools/TreeBrowse.resx
@@ -118,14 +118,14 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <metadata name="imageList1.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
-    <value>17, 17</value>
+    <value>107, 17</value>
   </metadata>
   <data name="imageList1.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACi
-        DwAAAk1TRnQBSQFMAgEBBwEAAVABAAFQAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAAK
+        DAAAAk1TRnQBSQFMAgEBBAEAAQgBAAEIAQABEAEAARABAAT/AQkBAAj/AUIBTQE2AQQGAAE2AQQCAAEo
         AwABQAMAASADAAEBAQABCAYAAQgYAAGAAgABgAMAAoABAAGAAwABgAEAAYABAAKAAgADwAEAAcAB3AHA
         AQAB8AHKAaYBAAEzBQABMwEAATMBAAEzAQACMwIAAxYBAAMcAQADIgEAAykBAANVAQADTQEAA0IBAAM5
         AQABgAF8Af8BAAJQAf8BAAGTAQAB1gEAAf8B7AHMAQABxgHWAe8BAAHWAucBAAGQAakBrQIAAf8BMwMA
@@ -153,45 +153,33 @@
         AcwBAAH/AZkB/wEAAf8BzAIAAf8BzAEzAQAB/wHMAWYBAAH/AcwBmQEAAf8CzAEAAf8BzAH/AQAC/wEz
         AQABzAH/AWYBAAL/AZkBAAL/AcwBAAJmAf8BAAFmAf8BZgEAAWYC/wEAAf8CZgEAAf8BZgH/AQAC/wFm
         AQABIQEAAaUBAANfAQADdwEAA4YBAAOWAQADywEAA7IBAAPXAQAD3QEAA+MBAAPqAQAD8QEAA/gBAAHw
-        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD/wsAAS4BAgH/FwAB8wGY
-        AXICTwFyAe0B8R4AAS4BUAFPAfQUAAH/AZgBTwGYA7sBCAF4AUkB7QH/EgABBwW0AVABTwIuAVABmAFQ
-        ASgB9wEAAQcFtAPPBa4BBwIAAf8CeAEIArsBugK0AZgBmQJyAf8RAAG0Bf8BUASYAXgBmAFQASgB9AG0
-        Df8BrgIAAZgBeAGZAXgBugG0AboCtAJyAZgBcgHtEQABtAX/AVABmAV4AZgBUAEuAbQB/wHUAf8D7wH3
-        BZIB/wGuAQAB9AGXAQgClwG6A7QBswGRAZcBcgGZAUkB8RAAAbQF/wFQAZkDmAF4AZgBUAEuAf8BtA3/
-        Aa4BAAKYAQgBnQGYBLQCswG0AZEBeAGYAe0QAAG0Bf8EUAFyAZgBUAFPAa4BAAG0Af8B2wH/AQcE7wT3
-        Af8BzwEAAXgBCAGYArsDtAOzAbQBkQFyAZkBUBAAAbQJ/wFQAXgBUAH2Ac8BAAG0Df8BzwEAAZcBGwGX
-        AZ0BuwG0AboBtAG6AZ0BugGRAnIBCAFPEAABtAn/AlAB8wH/Ac8BAAG0Af8B2wH/AwcG7wH/Ac8BAAGX
-        AcIBmAGXArsBtAG6AbsBnQJ3AZcBcgEIAU8QAAG0CP8E9AH/AbQBAAG0Df8BtAEAAXgBCAGYAZ4BCAHC
-        A7oBlwJ3ApcBmQFyEAABtAf/AvQD8wH/AbQBAAG0Af8B2wH/CQcB/wG0AQABCAGZAQgCwQHCArsCugKd
-        AZcDmBAAAbQN/wG0AQABtA3/AbQBAAH0AZcBGwEIAcECCAK7AroBuwGYAQgBUAHzEAAPtAEAD7QCAAEI
-        AZgCwgHxAcIBuwEJA7sBCAF4AZgRAAG1DQkBtAEAAbUNCQG0AgAB/wKYAhsBwgIIArsBCAKYAf8RAAHx
-        AbsLtAG1AfEBAAHxAbsLtAG1AfEDAAH/AQgBlwUIAZgBlwGYAf82AAH0AQgBmAKXAXgBCAH0FAAB/wG8
-        Ae8BtQG0AZEEiwEoAQIBkQH0BwAJUgFMAXQCAAH/Ae8BIwFLAVIBUQHtCwABRAFLAVIBmQH2BwAB8QG0
-        AbsBCQHwAfEB8wH0Av8BLgFQASgBvAcAAXQBGwHDBaABwwKZAgAB/wHtAUsCmgFSAUsB9AcAAQkCtAFL
-        ApoBUgFLAZEEtAG7AQABvAG1BP8BUAFPAi4BUAGYAVABTwH0AQABBwS0AewBmQGgAnoBUgJ6ARoBUgH0
-        AwAB8QFRAfYBdAFMAlIC6wNtAewBAAG0AvQBUQH2AXQBTAJSAfAD8wG0AQAB8gGLBLQBUASYAXgBmAFQ
-        AU8B9AG0Bf8BeQEaBHoBmgGZAewBAAHxAgcB7wFzAXkBmQF5AnoBUgGSArwB8wFtAQABtAH0AQkBmQF5
-        AZkBeQJ6AXQB9gH/AfMBtAEAAf8BuwG1AfQCCQFQAZgFeAGYAVABLgG0Bf8BGgF5AaABegFSAXoBGgF0
-        Aa4BAAHvAfIC8AG8ARwBeQHDA3oBUgLvAbwBbQEAAbQB9AIJAe8BeQHDA3oBUgG8AfMBtAIAAfQBtAH/
-        AhkBUAGZA5gBeAGYAVABLgH/AbQG/wGZARoBmgFSAaABUgEaAa4BAAHvAfEEiwHrAXkBwwN6AVIBHAG8
-        AW0BAAG1AfQBCQH/AQkBGgF5AcMDegFSAfABtAIAAf8BtAH/AhkEUAFyAZgBUAFPAf8BAAG0Bv8B9AF5
-        AcMBmgEaAXkB/wHPAQABBwHxArQDtQH3AXoBwwN6AVIBBwHrAQABtQH/BAkBBwF6AcMDegF0AZECAAH/
-        AbMB/wYZAVABeAFQAbMB/wEAAbQH/wEaAZoBwwF5ARsB/wHPAQABBwHxAc8FtAH3AXoBwwJ6AnQB7AEA
-        AQkB/wEJAf8BCQL/ARoBegHDAnoCdAH/AgABtAH/BhkCUAH/AbQB/wEAAbQH/wH0AXkBGgGZAfQB/wHP
-        AQABBwHxAc8GtAHsAZoBGgGZAZoBGgF0AQABCQH/BgkBmQGaARoBmQGaARoBdAIAAbQB8wgZAf8BtAH/
-        AQABtAj/ARoBeQHzAfQB/wG0AQABvAHxAc8GtAGLAZkBeQEaAfYBGgFSAQABCQH/AQkB/wEJA/8BCQEa
-        AXkBGgH2ARoBdAIAAbsBGQH0BxkB/wK0AfQBtAf/AvQD8wH/AbQBAAG8AfEGzwG0AYsB8AFzAXQBmQFS
-        AXMBAAEJAf8ICQHvAXQBmQFSARsCAAIJAf8HGQH/AbQBGQK0Df8BtAEAAfAB9AjxAfMBkgIHAfAB7QEA
-        AQkM/wG0AwACCQH/BBkD9AH/AbQB/wG7D7QBAAPwArwDBwPvAfcC7QHwAZIBAAEJAf8HmAJ4AZcB/wG0
-        AwAB8QEJAf8E9AX/ARkBtAG1DQkBtAYAAfQB8AHxAfMEvAEHAfEBkgEAAQkM/wG0AwAB8gHcBf8B9AMZ
-        AQkBugHzAfEBuwu0AbUB8QcAAf8C8QHyBPEB8wH3AQAB8wgJA7UBtAEJAwAB9AEJAdwB2wS6AbsDCQH0
-        Af8YAAHyAbwDBwLvAfAQAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEBAQABAQYAAQEWAAP/AQAB/wHH
-        Av8B8AEPAgAB/wHDAv8BwAEDAwABAQEAAQEBgAEBBQABAQGAAQEFAAEBBwABAQUAAQEBAAEBBQABAQEA
-        AQEFAAEBAQABAQUAAQEBAAEBBQABAQEAAQEFAAEBAQABAQUAAQEBAAEBAYABAQMAAQEBAAEBAYABAQMA
-        AQEBAAEBAcABAwIABP8B8AEPAwABAwH4AQABwAF/AfABfwEAAQMB+AEAAcABPwGAAQEBAAEBAgAB4AEA
-        AYABAQMAAQECAAGAAQEDAAEBAgABgAEBAYACAAEBAgABgAEBAYABAQEAAQECAAGAAQEBgAEBAQABAQIA
-        AYABAAHAAQEBAAEBAgABgAEAAcABAQEAAQECAAGAAQABwAIAAQECAAGAAQABwAIAAQECAAGAAQEBwAIA
-        AQECAAGAAQEBwAIAAQEB+AEAAYABAQHAAgABAQH8AQABgAEBAcABAAP/AQAC/ws=
+        AfsB/wEAAaQCoAEAA4ADAAH/AgAB/wMAAv8BAAH/AwAB/wEAAf8BAAL/AgAD//8A/wD/AP8AHAAB/wHy
+        AZEBtAKuAfACAAF0DFIBdAIAAf8B7gHvAbUBtAGRBYsCkQH0BgAB9QG8Aa4CiwGuAbwB9AoAAfQBkQG0
+        AbUBuwK0AYsBkQHzAVIBwweaA3oBwwFSAgAB8QG0AbsBCQHwAfEB8wH0AfUB/wEZAfQBtQHwBQAB8wGu
+        AbQBuwIJAbsCrgHzBwAC/wGRBLsEtAGLAVIB9gSaBHoCWQHDAVICAAHuAbUF/wP1AbUBGQG1Ae4EAAHz
+        AYsBtAG7BLQBuwG0AYsB8wMAAf8B8QNyAc8DCQG7BLQBzwFSAfYFmgR6AVkBwwFSAgAB8gGLCbQBGQEJ
+        AQcDAAH1AbQBtQEJBrQBtQG0Aa4B9QEAAfQB7AFyApgBcgGuAgkBuwa0AVIB9gWaBZkB8AFSArQB/wG7
+        AbUB9AMJBBkB9AEJAbUDAAHwAbQBCQK0AQkC/wHxArQBuwGuAbwBAAFyBJgBcgGLAQkBtQG0ArsDtAHP
+        AVIC/wP2BpoBwwFSAfQBtAEAAfQBtAH/CBkB8QG1AwABtAG7AbUDtAHxAfUEtAG7Aa4BAAFyAggBBwGY
+        AXIB7AFvAhcBbwHsAbQBuwG0Aa4BUgH2AXkBdAFSAZoB9Ab/AVIB9AG0AQAB/wG0Af8IGQHzAbQDAAGz
+        AQkEtAHyAfUEtAEJAYsBAAFyAggBmAEcAW8BFwHjAZQB4wFvAUwBbwGRAbQBtQFYAfYCmgF6CVIB9AG0
+        AQAB/wGzAfUIGQH1AbMB/wIAAbMBCQS0Av8EtAEJAYsBAAFyAQgBmAFyAW8B4wOUAW8C4wEXAUwB8wH/
+        AVgB9gOaARoBtAH1BhkB9QG0AgABtAH1CBkB/wG0Af8CAAG0AQkBuwO0AgkDtAG1AbsBzwEAAXICmAFy
+        ARcBvQOUAeMBbwLjARcB9AEAAVgF/wEJAfUGGQH0AbQCAAG0AfMIGQH/AbQB/wIAARkBtAEJA7QC9QO0
+        AQkBtAG8AQAB7wF4AnIBFwG9AZQD4wJvAeMBFwH0AQAGeQEJAfUGGQH0AbQCAAG7ARkB9AcZAf8CtAH0
+        AQAB9QG0AbsBCQK0AgkCtAEJAbUBtAH1AQAB/wH0AfIBcgEXAZQC4wKUAuMBbwEXAfQHAAEJAfUEGQHd
+        AQkB9AG0AgACCQH1BxkB/wG0ARkBtAIAAfMBtAG7AgkCtQG7AQkBtQGtAfMGAAFvARYBlAHjAhcB4wGU
+        ARYBTAH1BwABCQH1BBkB8wH0AfUBtAIAAgkB/wQZA/QB/wG0Af8BuwMAAfMCtAMJAbsCtAHzBwABkwPj
+        AhYD4wGTCAABCQH0AxkBCQH1ARkCCQIAAfEBCQH/BPQC9QL/AfUBGQG0BAAB9QHxBLQB8AH1CAAB/wH0
+        AfMBbwIXAW8B8wH0Af8IAAEJAf8F9AHcAQkB/wIAAfIB3AT/AfUB9AMZAQkBugHzJgAECQK0AbUB8AH/
+        AwAB9AEJAdwB2wS6AbsDCQH0Af8BQgFNAT4HAAE+AwABKAMAAUADAAEgAwABAQEAAQEGAAEBFgAD/4EA
+        Av8B/gEDAQABAwEAAQMB8AEPAfwCAAEDAQABAwHgAQcB8AIAAQMBAAEDAcABAwGAAgABAwEAAQMBgAEB
+        BQABAwGAAQEEAAGAAQMBgAEBBAABgAEDAYABAQQAAYABAQGAAQEEAAHAAQEBgAEBAQABAQIAAcABAQGA
+        AQEBAAEBAgABwAEAAYABAQEAAQEB/AEAAcABAAHAAQMB8AEBAfwBAAHAAQAB4AEHAfABAwH8AQABwAEA
+        AfABDwHwAQMB/AEAAcABAAT/AfwBAQHAAQAL
 </value>
   </data>
+  <metadata name="addSpf.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>17, 17</value>
+  </metadata>
 </root>
